syntax = "proto3";

package com.sword.v1;

import "com/sword/v1/sword.proto";

option java_multiple_files = true;

message CreateSwordRequest {
  string name = 1;
  Type type = 2;
  string samurai_id = 3;
}
