syntax = "proto3";

package com.sword.v1;

option java_multiple_files = true;

message GetByIdRequest {
  string id = 1;
}