syntax = "proto3";

package com.sword.v1;

option java_multiple_files = true;

message ListSamuraiWithSwordsRequest {
  repeated string ids = 1;
}